--- a/Assignment2/Assignment2/src/main/webapp/WEB-INF/web.xml
+++ b/Assignment2/Assignment2/src/main/webapp/WEB-INF/web.xml
@@ -11,11 +11,30 @@ id="WebApp_ID" version="3.0">
           <servlet-name>dispatcher</servlet-name>  
           <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
           <load-on-startup>1</load-on-startup>  
-       </servlet>  
+       </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>RedirectLogin</display-name>
+  	<servlet-name>RedirectLogin</servlet-name>
+  	<servlet-class>controller.RedirectLogin</servlet-class>
+  </servlet>  
        <servlet-mapping>  
           <servlet-name>dispatcher</servlet-name>  
           <url-pattern>/</url-pattern>  
        </servlet-mapping>
+       <servlet-mapping>
+       	<servlet-name>RedirectLogin</servlet-name>
+       	<url-pattern>/RedirectLogin</url-pattern>
+       </servlet-mapping>
        
-       
+        <error-page>
+  	<error-code>404</error-code>
+  	<location>/AppExceptionHandler</location>
+  </error-page>
+  
+  <error-page>
+  <exception-type>javax.servlet.ServletException</exception-type>
+  <location>/AppExceptionHandler</location>
+  </error-page>
 </web-app>
