--- a/Assignment4/src/main/resources/application.properties
+++ b/Assignment4/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port = 8082
+#############
+# DataSource settings: set here your own configurations for the database 
+# connection. In this example we have "netgloo_blog" as database name and 
+# "root" as username and password.
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url = jdbc:mysql://localhost:3306/assignment4?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.generate-ddl=true
