--- a/Assignment4/pom.xml
+++ b/Assignment4/pom.xml
@@ -64,6 +64,11 @@
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		</dependency>
+	<dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>  
+	
 	</dependencies>
 
 	<build>
