--- a/Assignment4/src/main/resources/application.properties
+++ b/Assignment4/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.url = jdbc:mysql://localhost:3306/assignment4?autoReconnect=tr
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+ 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/assignment4?autoReconnect=true&useSSL=false
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
