--- a/Assignment4/src/main/resources/application.properties
+++ b/Assignment4/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.generate-ddl=true
 #spring.datasource.password=root
 #spring.jpa.generate-ddl=true
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
